--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,14 +1,59 @@
 html,
 body {
+  height: 100%;
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
+:root {
+  --main-blue: rgb(27, 80, 194);
+  --general-spacing: 30px;
+  --footer-height: 80px;
+}
+
+h1,
+h2 {
+  margin: 0;
+}
+
+p {
+  font-size: 20px;
+}
+
 a {
-  color: inherit;
+  font-weight: bold;
   text-decoration: none;
+  color: var(--main-blue);
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+header {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  margin-top: 30px;
+}
+
+main {
+  max-width: 50rem;
+  padding: 4rem 3rem calc(4rem + var(--footer-height)) 3rem;
+}
+
+footer {
+  width: 100%;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: var(--footer-height);
+  background-color: #cac9c9;
+  position: absolute;
+  bottom: 0;
 }
 
 * {
